<resources>
    <string name="app_name">TapGate</string>
    <string name="button_gate_name">Gate</string>
    <string name="chevron_left">Chevron Left</string>
    <string name="chevron_right">Chevron Right</string>
    <string name="text_bt_status">Bluetooth Offline</string>
    <string name="text_online_status">Online Enabled</string>
    <string name="check_online_status">check online status</string>
    <string name="check_bluetooth_status">check bluetooth status</string>
    <string name="content_description_icon_online_status">icon online status</string>
    <string name="content_description_icon_bluetooth_status">icon bluetooth status</string>
</resources>